# kero-voice

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tts.py
.claude/: settings.local.json
src/: .env.example  db.py  main.py  system_monitor.py  tts.py
