[project]
name = "kero-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "discord-py>=2.6.4",
    "edge-tts>=7.2.7",
    "tts>=0.22.0",
    "torch<2.6",
    "torchaudio<2.6",
    "pynacl>=1.6.1",
    "cutlet>=0.5.0",
    "fugashi>=1.5.2",
    "unidic-lite>=1.0.8",
    "transformers==4.36.2",
]
