[project]
name = "kero-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "discord-py>=2.6.4",
    "pynacl>=1.6.1",
    "python-dotenv>=1.2.1",
    "chatterbox-tts",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "ml-dtypes>=0.5.0",
    "numpy>=1.26.0,<2.4",
    "setuptools<81",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
chatterbox-tts = { git = "https://github.com/resemble-ai/chatterbox.git" }
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[tool.uv]
override-dependencies = [
    "torchaudio>=2.7.0",
    "torch>=2.7.0",
    "numpy>=1.26.0,<2.4",
]